add certification contents

--- a/about.html
+++ b/about.html
@@ -472,7 +472,7 @@
                     </div>
                   </div>
                   <div class="awards-recognitions">
-                    <h2 class="main-common-title">Awards and Recognitions
+                    <h2 class="main-common-title">Awards and Certifications
                     </h2>
                     <div class="awards-recognitions-main">
                       <ul class="list-unstyled">
@@ -481,10 +481,10 @@
                             <div class="awards-item">
                               <div class="award-name">
                                 <div class="icon">
-                                  <img src="assets/img/icons/adobe.svg" alt="adobe">
+                                  <img src="assets/img/icons/Skilvul.svg" alt="Skilvul">
                                 </div>
                                 <div class="text">
-                                  <h4 class="title">Adobe Design Contest</h4>
+                                  <h4 class="title">2x Best UI/UX Mentor MSIB</h4>
                                   <p class="year">2022 - 2023</p>
                                 </div>
                               </div>
@@ -500,12 +500,12 @@
                                     <path d="M6.80234 12L3.40234 17.89L7.00034 17.657L8.59834 20.889L11.9983 15"
                                       stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                   </svg>
-                                  Runner Up
+                                  Skilvul
                                 </h4>
                               </div>
                               <div class="project-btn">
                                 <span>
-                                  View Project
+                                  View Certificate
                                   <svg class="arrow-up" width="14" height="15" viewBox="0 0 14 15" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M9.91634 4.5835L4.08301 10.4168" stroke-linecap="round"
@@ -523,11 +523,11 @@
                             <div class="awards-item">
                               <div class="award-name">
                                 <div class="icon">
-                                  <img src="assets/img/icons/dribbble.svg" alt="dribbble">
+                                  <img src="assets/img/icons/dts-digitalent.svg" alt="dts-digitalent">
                                 </div>
                                 <div class="text">
-                                  <h4 class="title">Dribbble Design Contest</h4>
-                                  <p class="year">2022 - 2023</p>
+                                  <h4 class="title">UI/UX Academy (PROA)</h4>
+                                  <p class="year">2022 - 2022</p>
                                 </div>
                               </div>
                               <div class="winner-tag">
@@ -542,12 +542,12 @@
                                     <path d="M6.80234 12L3.40234 17.89L7.00034 17.657L8.59834 20.889L11.9983 15"
                                       stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                   </svg>
-                                  Gold Winner
+                                  DTS Kominfo
                                 </h4>
                               </div>
                               <div class="project-btn">
                                 <span>
-                                  View Project
+                                  View Certificate
                                   <svg class="arrow-up" width="14" height="15" viewBox="0 0 14 15" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M9.91634 4.5835L4.08301 10.4168" stroke-linecap="round"
@@ -565,11 +565,11 @@
                             <div class="awards-item">
                               <div class="award-name">
                                 <div class="icon">
-                                  <img src="assets/img/icons/awwwards.png" alt="awwwards">
+                                  <img src="assets/img/icons/google.svg" alt="google">
                                 </div>
                                 <div class="text">
-                                  <h4 class="title">Awwwards Nominee</h4>
-                                  <p class="year">2022 - 2023</p>
+                                  <h4 class="title">Google UX Design</h4>
+                                  <p class="year">2021 - 2022</p>
                                 </div>
                               </div>
                               <div class="winner-tag">
@@ -584,12 +584,12 @@
                                     <path d="M6.80234 12L3.40234 17.89L7.00034 17.657L8.59834 20.889L11.9983 15"
                                       stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                   </svg>
-                                  Runner Up
+                                  Coursera
                                 </h4>
                               </div>
                               <div class="project-btn">
                                 <span>
-                                  View Project
+                                  View Certificate
                                   <svg class="arrow-up" width="14" height="15" viewBox="0 0 14 15" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M9.91634 4.5835L4.08301 10.4168" stroke-linecap="round"
@@ -607,11 +607,11 @@
                             <div class="awards-item">
                               <div class="award-name">
                                 <div class="icon">
-                                  <img src="assets/img/icons/behance.svg" alt="behance">
+                                  <img src="assets/img/icons/Dibimbing.svg" alt="Dibimbing">
                                 </div>
                                 <div class="text">
-                                  <h4 class="title">Behance Design Contest</h4>
-                                  <p class="year">2022 - 2023</p>
+                                  <h4 class="title">UI/UX Bootcamp Batch 1</h4>
+                                  <p class="year">2021 - 2021</p>
                                 </div>
                               </div>
                               <div class="winner-tag">
@@ -626,12 +626,12 @@
                                     <path d="M6.80234 12L3.40234 17.89L7.00034 17.657L8.59834 20.889L11.9983 15"
                                       stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                   </svg>
-                                  Gold Winner
+                                  Dibimbing.id 
                                 </h4>
                               </div>
                               <div class="project-btn">
                                 <span>
-                                  View Project
+                                  View Certificate
                                   <svg class="arrow-up" width="14" height="15" viewBox="0 0 14 15" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M9.91634 4.5835L4.08301 10.4168" stroke-linecap="round"
