update content to all pages

--- a/about.html
+++ b/about.html
@@ -272,7 +272,7 @@
                   <div class="top-info">
                     <div class="text">
                       <h1 class="main-title">Hi, This Is <span>Hazrul Aswad</span> 👋</h1>
-                      <p>A Passionate <b>Product Designer, Design Mentor, and aspiring Front-End Developer</b>.  I create visually engaging, educational digital experiences for curious learners, blending design and coding to inspire growth and creativity.
+                      <p>A <b>dedicated product Designer</b> with experience crafting intuitive and visually engaging digital experiences. My work centers around user-driven design, where usability holds equal weight with intentional aesthetics to create human-focused, meaningful products. I am also able to work effortlessly to produce something new from creative thought Processes with tremendous opportunities
                     </div>
                     <div class="available-btn">
                       <span><i class="fas fa-circle"></i> Available For Hire</span>
@@ -750,7 +750,7 @@
     <footer class="footer-area">
       <div class="container">
         <div class="text text-center">
-          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a></p>
+          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Dec 2024)</i></p>
         </div>
       </div>
     </footer>
