--- a/services.html
+++ b/services.html
@@ -272,8 +272,7 @@
                   <div class="top-info">
                     <div class="text">
                       <h1 class="main-title">Services I <span>Offered</span></h1>
-                      <p>Transforming Ideas into Innovative Reality, Elevate Your Vision with Our Expert <b>Product
-                          Design and Development</b> Services!</p>
+                      <p>Transforming your vision into intuitive, user-centered designs. Let’s create impactful digital experiences together!
                     </div>
                     <div class="available-btn">
                       <span><i class="fas fa-circle"></i> Available For Hire</span>
@@ -860,7 +859,7 @@
     <footer class="footer-area">
       <div class="container">
         <div class="text text-center">
-          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a></p>
+          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Dec 2024)</i></p>
         </div>
       </div>
     </footer>
