--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
     <footer class="footer-area">
       <div class="container">
         <div class="text text-center">
-          <p>@ azrulportfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a></p>
+          <p>@ azrul's portfolio 2024, Design By <a href="https://www.linkedin.com/in/uxbyazrul/">azrulartistik</a> <i>(last update on Dec 2024)</i></p>
         </div>
       </div>
     </footer>
