--- a/about.html
+++ b/about.html
@@ -477,7 +477,7 @@
                     <div class="awards-recognitions-main">
                       <ul class="list-unstyled">
                         <li>
-                          <a href="#" class="d-block w-100">
+                          <a href="https://drive.google.com/file/d/1yDMKlO546eRuhi5qMTOVTOIZB81cVSw8/view?usp=sharing" class="d-block w-100">
                             <div class="awards-item">
                               <div class="award-name">
                                 <div class="icon">
@@ -519,7 +519,7 @@
                           </a>
                         </li>
                         <li>
-                          <a href="#" class="d-block w-100">
+                          <a href="https://drive.google.com/file/d/1qGqi-u7mgHc83lDWbPBm5ZoS60PP9KfI/view?usp=drive_link" class="d-block w-100">
                             <div class="awards-item">
                               <div class="award-name">
                                 <div class="icon">
@@ -561,7 +561,7 @@
                           </a>
                         </li>
                         <li>
-                          <a href="#" class="d-block w-100">
+                          <a href="https://drive.google.com/file/d/1_YYPkrbDbQWWMsINNMT-IDTXabxrXz9k/view?usp=drive_link" class="d-block w-100">
                             <div class="awards-item">
                               <div class="award-name">
                                 <div class="icon">
@@ -603,7 +603,7 @@
                           </a>
                         </li>
                         <li>
-                          <a href="#" class="d-block w-100">
+                          <a href="https://drive.google.com/file/d/18cMwTHyjXtJEiK_4t1J3ikfE-u3WZ39G/view?usp=drive_link" class="d-block w-100">
                             <div class="awards-item">
                               <div class="award-name">
                                 <div class="icon">
