--- a/index.html
+++ b/index.html
@@ -495,8 +495,8 @@
                       <div class="col-lg-12">
                         <div class="project-item">
                           <div class="image">
-                            <img src="assets/img/projects/project-1.png" alt="project-1" class="img-fluid w-100">
-                            <a href="assets/img/projects/project-1.png"
+                            <img src="assets/img/projects/Recent1.png" alt="Recent1" class="img-fluid w-100">
+                            <a href="assets/img/projects/Recent1.png"
                               class="gallery-popup full-image-preview parent-container">
                               <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none"
                                 stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
@@ -504,7 +504,7 @@
                               </svg>
                             </a>
                             <div class="info">
-                              <span class="category">Product Design</span>
+                              <span class="category">UI Dribbble Shot</span>
                             </div>
                           </div>
                         </div>
@@ -521,7 +521,7 @@
                               </svg>
                             </a>
                             <div class="info">
-                              <span class="category">Product Design</span>
+                              <span class="category">UI Dribbble Shot</span>
                             </div>
                           </div>
                         </div>
