Update entire HTML and CSS code changes

--- a/services.html
+++ b/services.html
@@ -447,7 +447,7 @@
                           </div>
                           <div class="details">
                             <p>
-                              "We've been using BentoFolio for over a year now, and I must say, it's been a game-changer
+                              "We've been using Azrul's Portfolio for over a year now, and I must say, it's been a game-changer
                               for us. The user interface is intuitive and the feature.
                             </p>
                           </div>
@@ -480,7 +480,7 @@
                           </div>
                           <div class="details">
                             <p>
-                              "We've been using BentoFolio for over a year now, and I must say, it's been a game-changer
+                              "We've been using Azrul's Portfolio for over a year now, and I must say, it's been a game-changer
                               for us. The user interface is intuitive and the feature.
                             </p>
                           </div>
