--- a/about.html
+++ b/about.html
@@ -394,7 +394,7 @@
                           </div>
                           <div class="details">
                             <p>
-                              "We've been using BentoFolio for over a year now, and I must say, it's been a game-changer
+                              "We've been using Azrul's Portfolio for over a year now, and I must say, it's been a game-changer
                               for us. The user interface is intuitive and the feature.
                             </p>
                           </div>
@@ -427,7 +427,7 @@
                           </div>
                           <div class="details">
                             <p>
-                              "We've been using BentoFolio for over a year now, and I must say, it's been a game-changer
+                              "We've been using Azrul's Portfolio for over a year now, and I must say, it's been a game-changer
                               for us. The user interface is intuitive and the feature.
                             </p>
                           </div>
@@ -460,7 +460,7 @@
                           </div>
                           <div class="details">
                             <p>
-                              "We've been using BentoFolio for over a year now, and I must say, it's been a game-changer
+                              "We've been using Azrul's Portfolio for over a year now, and I must say, it's been a game-changer
                               for us. The user interface is intuitive and the feature.
                             </p>
                           </div>
