--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="assets/fontawsome/css/all.min.css">
   <link rel="stylesheet" href="assets/fontawsome/css/fontawesome.min.css">
   <link rel="stylesheet" href="assets/css/slick.css">
-  <link rel="stylesheet" href="assets/css/magnific-popup.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
@@ -463,7 +462,7 @@
                                 <img src="assets/img/icons/visualcode.svg" alt="visualcode">
                               </div>
                               <div class="text">
-                                <h4 class="title">Visual Code</h4>
+                                <h4 class="title">V-code (Learn)</h4>
                               </div>
                             </div>
                           </div>
@@ -492,7 +491,6 @@
                     </a></h3>
                     <div class="projects-main mt-24">
                       <div class="row g-4 parent-container">
-                        <!-- Project 1 -->
                         <div class="col-lg-12">
                           <div class="project-item">
                             <div class="image">
@@ -527,9 +525,7 @@
                             </div>
                           </div>
                         </div>
-                      </div>
-                    </div>
-                    
+
                     <!-- Modal for Project 1 -->
                     <div class="modal fade" id="projectModal1" tabindex="-1" aria-labelledby="projectModal1Label" aria-hidden="true">
                       <div class="modal-dialog modal-dialog-centered modal-xl">
@@ -676,7 +672,7 @@
                       opacity: 1;
                     }
                     
-                    /* Remove any Magnific Popup related styles */
+                    /* Remove atau comment semua style ini */
                     .mfp-container,
                     .mfp-content,
                     .mfp-figure,
@@ -685,7 +681,12 @@
                     .mfp-title,
                     .mfp-counter,
                     .mfp-preloader,
-                    .mfp-arrow {
+                    .mfp-arrow,
+                    .mfp-wrap,
+                    .mfp-gallery,
+                    .mfp-close-btn-in,
+                    .mfp-auto-cursor,
+                    .mfp-ready {
                       display: none !important;
                     }
                     </style>
@@ -700,25 +701,24 @@
             </div>
           </div>
           <div class="services-area mt-24">
-            <div class="row g-4 parent-container">
-              <div class="col-xl-8">
-                <div class="card services-card">
-                  <div class="card-body">
-                    <h3 class="card-title">Services I Offered
-                      <a class="link-btn" href="services.html"> See All Services
-                        <svg class="icon" width="20" height="20" viewBox="0 0 20 20" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
-                          <path d="M4.16699 10H15.8337" stroke="#4770FF" stroke-width="1.5" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                          <path d="M10.833 15L15.833 10" stroke="#4770FF" stroke-width="1.5" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                          <path d="M10.833 5L15.833 10" stroke="#4770FF" stroke-width="1.5" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                        </svg>
-
-                      </a></h3>
-                    <div class="services-main mt-24">
-                      <div class="row g-4">
+            <div class="container">
+              <div class="row g-4">
+                <!-- Services Card -->
+                <div class="col-xl-8">
+                  <div class="card services-card">
+                    <div class="card-body">
+                      <h3 class="card-title">Services I Offered
+                        <a class="link-btn" href="services.html">
+                          See All Services
+                          <svg class="icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M4.16699 10H15.8337" stroke="#4770FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M10.833 15L15.833 10" stroke="#4770FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M10.833 5L15.833 10" stroke="#4770FF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                        </a>
+                      </h3>
+                      <div class="services-main mt-24">
+                        <div class="row g-4">
                         <div class="col-md-3 col-sm-6 col-6">
                           <div class="services-item text-center">
                             <div class="image">
@@ -827,7 +827,6 @@
   <!-- JS here -->
   <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/js/jquery.magnific-popup.min.js"></script>
   <script src="assets/js/ajax-form.js"></script>
   <script src="assets/js/clipboard.min.js"></script>
   <script src="assets/js/slick.min.js"></script>
