push content and code updates

--- a/about.html
+++ b/about.html
@@ -272,7 +272,7 @@
                   <div class="top-info">
                     <div class="text">
                       <h1 class="main-title">Hi, This Is <span>Hazrul Aswad</span> 👋</h1>
-                      <p>A <b>dedicated product Designer</b> with experience crafting intuitive and visually engaging digital experiences. My work centers around user-driven design, where usability holds equal weight with intentional aesthetics to create human-focused, meaningful products. I am also able to work effortlessly to produce something new from creative thought Processes with tremendous opportunities
+                      <p>I specialize in <b>creating user-centered</b> digital experiences that seamlessly blend functionality and aesthetics into impactful products. Driven by creativity, strategic thinking, and a deep understanding of user behavior, I design solutions that address real-world challenges. Based in Bogor, Indonesia, I am open to remote opportunities worldwide.
                     </div>
                     <div class="available-btn">
                       <span><i class="fas fa-circle"></i> Available For Hire</span>
@@ -285,13 +285,13 @@
                         <p class="subtitle">Years of Experience</p>
                       </div>
                       <div class="counter-item">
-                        <h3 class="number">20+</h3>
+                        <h3 class="number">25+</h3>
                         <p class="subtitle">Projects Completed
                         </p>
                       </div>
                       <div class="counter-item">
-                        <h3 class="number">100+</h3>
-                        <p class="subtitle">Satisfied Learners
+                        <h3 class="number">17+</h3>
+                        <p class="subtitle">Projects Developed
                         </p>
                       </div>
                     </div>
@@ -313,57 +313,41 @@
                     </div>
                   </div>
                   <div class="working-with-area">
-                    <h2 class="main-common-title">Working With 50+ Brands ✨ Worldwide
+                    <h2 class="main-common-title">Already Contributed With Some Brands ✨
                     </h2>
                     <div class="working-with-main">
                       <div class="items">
-                        <img src="assets/img/icons/notion.svg" alt="notion">
+                        <img src="assets/img/icons/Eduqat.svg" alt="Eduqat">
                       </div>
                       <div class="items">
-                        <img src="assets/img/icons/webflow.svg" alt="webflow">
+                        <img src="assets/img/icons/Skilvul.svg" alt="Skilvul">
                       </div>
                       <div class="items">
-                        <img src="assets/img/icons/mico.svg" alt="mico">
+                        <img src="assets/img/icons/IDN.svg" alt="IDN">
                       </div>
                       <div class="items">
-                        <img src="assets/img/icons/framer.svg" alt="framer">
+                        <img src="assets/img/icons/DesignLagi.svg" alt="DesignLagi">
                       </div>
                       <div class="items">
-                        <img src="assets/img/icons/zeplin.svg" alt="zeplin">
+                        <img src="assets/img/icons/ui8.svg" alt="ui8">
                       </div>
                       <div class="items">
-                        <img src="assets/img/icons/figma.svg" alt="figma">
+                        <img src="assets/img/icons/freepik.svg" alt="freepik">
                       </div>
-                      <div class="items">
-                        <img src="assets/img/icons/notion.svg" alt="notion">
-                      </div>
-                      <div class="items">
-                        <img src="assets/img/icons/webflow.svg" alt="webflow">
-                      </div>
-                      <div class="items">
-                        <img src="assets/img/icons/mico.svg" alt="mico">
-                      </div>
-                      <div class="items">
-                        <img src="assets/img/icons/framer.svg" alt="framer">
-                      </div>
-                      <div class="items">
-                        <img src="assets/img/icons/zeplin.svg" alt="zeplin">
-                      </div>
-                      <div class="items">
-                        <img src="assets/img/icons/figma.svg" alt="figma">
-                      </div>
-                      <div class="items">
-                        <img src="assets/img/icons/notion.svg" alt="notion">
-                      </div>
-                      <div class="items">
-                        <img src="assets/img/icons/webflow.svg" alt="webflow">
-                      </div>
-                      <div class="items">
-                        <img src="assets/img/icons/mico.svg" alt="mico">
-                      </div>
-                      <div class="items">
-                        <img src="assets/img/icons/framer.svg" alt="framer">
-                      </div>
+                    </div>
+                  </div>
+                  <!-- Menghapus mt-4 mb-4 -->
+                  <div class="video-section">
+                    <h2 class="main-common-title mb-3">Watch My Introduction 🎥</h2>
+                    <div class="video-container position-relative" style="padding-bottom: 56.25%; height: 0; overflow: hidden;">
+                      <iframe 
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+                        src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
+                        title="Hazrul Aswad Introduction"
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen>
+                      </iframe>
                     </div>
                   </div>
                   <div class="client-feedback">
