--- a/blog.html
+++ b/blog.html
@@ -31,10 +31,15 @@
           <div class="menu-container">
             <div class="logo">
               <a class="navbar-brand me-0" href="index.html">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M0 1.5C0 1.10218 0.158035 0.720644 0.43934 0.43934C0.720644 0.158035 1.10218 0 1.5 0L9 0C9.39782 0 9.77936 0.158035 10.0607 0.43934C10.342 0.720644 10.5 1.10218 10.5 1.5V22.5C10.5 22.8978 10.342 23.2794 10.0607 23.5607C9.77936 23.842 9.39782 24 9 24H1.5C1.10218 24 0.720644 23.842 0.43934 23.5607C0.158035 23.2794 0 22.8978 0 22.5V1.5ZM13.5 1.5C13.5 1.10218 13.658 0.720644 13.9393 0.43934C14.2206 0.158035 14.6022 0 15 0L22.5 0C22.8978 0 23.2794 0.158035 23.5607 0.43934C23.842 0.720644 24 1.10218 24 1.5V9C24 9.39782 23.842 9.77936 23.5607 10.0607C23.2794 10.342 22.8978 10.5 22.5 10.5H15C14.6022 10.5 14.2206 10.342 13.9393 10.0607C13.658 9.77936 13.5 9.39782 13.5 9V1.5ZM13.5 15C13.5 14.6022 13.658 14.2206 13.9393 13.9393C14.2206 13.658 14.6022 13.5 15 13.5H22.5C22.8978 13.5 23.2794 13.658 23.5607 13.9393C23.842 14.2206 24 14.6022 24 15V22.5C24 22.8978 23.842 23.2794 23.5607 23.5607C23.2794 23.842 22.8978 24 22.5 24H15C14.6022 24 14.2206 23.842 13.9393 23.5607C13.658 23.2794 13.5 22.8978 13.5 22.5V15Z"
-                    class="logo-icon" />
+                <svg class="logo-svg" width="28" height="28" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0_227_50414)">
+                    <path class="logo-icon" fill-rule="evenodd" clip-rule="evenodd" d="M0 19.2C0 12.4794 0 9.11905 1.30792 6.55211C2.4584 4.29417 4.29417 2.4584 6.55211 1.30792C9.11905 0 12.4794 0 19.2 0H28.8C35.5206 0 38.8809 0 41.4479 1.30792C43.7058 2.4584 45.5416 4.29417 46.6921 6.55211C48 9.11905 48 12.4794 48 19.2V28.8C48 35.5206 48 38.8809 46.6921 41.4479C45.5416 43.7058 43.7058 45.5416 41.4479 46.6921C38.8809 48 35.5206 48 28.8 48H19.2C12.4794 48 9.11905 48 6.55211 46.6921C4.29417 45.5416 2.4584 43.7058 1.30792 41.4479C0 38.8809 0 35.5206 0 28.8V19.2ZM15.6667 7H37.2V13.8H10L15.6667 7ZM34.9337 19.4669L28.1337 13.8002V17.578H21.1787C19.4271 17.578 17.763 18.3433 16.6231 19.6732L10 27.4002L17.4836 37.2224H26.8381L18.419 27.4002L23.2958 21.8857C24.049 21.034 24.9318 20.3064 25.9116 19.7297C26.5871 19.3321 27.3516 19.1127 28.1337 19.0909V32.6891V33.0668L34.9337 41.0002V19.4669Z" fill="#0E1018"/>
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_227_50414">
+                      <rect width="48" height="48" rx="12" fill="white"/>
+                    </clipPath>
+                  </defs>
                 </svg>
                 <span>Azrul's<span class="primary">Portfolio</span></span>
               </a>
@@ -373,7 +378,7 @@
                           <div class="article-publications-item">
                             <div class="image">
                               <a href="article.html" class="d-block w-100">
-                                <img src="assets/img/blog/blog-img-6.jpg" alt="blog-img-6" class="img-fluid w-100">
+                                <img src="assets/img/blog/blog-img.jpg" alt="blog-img-6" class="img-fluid w-100">
                               </a>
                               <a href="article.html" class="tags">Development</a>
                             </div>
