update content & code 3

--- a/article.html
+++ b/article.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Azrul's Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.svg">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/azrul-logo.svg">
   <!-- Place favicon.ico in the root directory -->
 
   <!-- CSS here -->
@@ -251,7 +251,7 @@
                     </div>
                     <div class="social-media-icon">
                       <ul class="list-unstyled">
-                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="https://dribbble.com/designlagi"><i class="fab fa-dribbble"></i></a></li>
                         <li><a href="https://medium.com/@azrulartistik"><i class="fab fa-medium"></i></a></li>
                         <li><a href="https://github.com/azrulartistik"><i class="fab fa-github"></i></a></li>
                         <li><a href="https://www.youtube.com/@mentorazrul"><i class="fab fa-youtube"></i></a></li>
