--- a/about.html
+++ b/about.html
@@ -263,7 +263,7 @@
                       </script>
                     <div class="social-media-icon">
                       <ul class="list-unstyled">
-                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="https://dribbble.com/designlagi"><i class="fab fa-dribbble"></i></a></li>
                         <li><a href="https://medium.com/@azrulartistik"><i class="fab fa-medium"></i></a></li>
                         <li><a href="https://github.com/azrulartistik"><i class="fab fa-github"></i></a></li>
                         <li><a href="https://www.youtube.com/@mentorazrul"><i class="fab fa-youtube"></i></a></li>
