--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
                   </div>
                   <div class="text">
                     <h3 class="card-title">Hazrul Aswad 👋</h3>
-                    <p>A Passionate <span>Product Designer</span> 🖥️ & <span>Design Mentor</span> that having more than
+                    <p>A Passionate <span>Product Designer</span> 🖥️ & <span>Design Mentor</span> with over
                       <span>4
-                        years</span> of working experiences over some
-                      companies and institutions. Currently I'm diving into front-end coding ⚙️</p>
+                        years</span> of working experience accross various
+                      companies and institutions. Currently I'm diving into front-end coding ⚙️."</p>
                       <div class="common-button-groups">
                         <!-- View CV button -->
                         <a class="btn btn-call" href="https://drive.google.com/file/d/1GmXUGTA0YTMYciLD2jUOUDU6DdOtXLii/view?usp=sharing" target="_blank">
@@ -259,7 +259,7 @@
                     </div>
                     <div class="social-media-icon">
                       <ul class="list-unstyled">
-                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="https://dribbble.com/designlagi"><i class="fab fa-dribbble"></i></a></li>
                         <li><a href="https://medium.com/@azrulartistik"><i class="fab fa-medium"></i></a></li>
                         <li><a href="https://github.com/azrulartistik"><i class="fab fa-github"></i></a></li>
                         <li><a href="https://www.youtube.com/@mentorazrul"><i class="fab fa-youtube"></i></a></li>
@@ -518,7 +518,7 @@
                         <div class="col-lg-12">
                           <div class="project-item">
                             <div class="image">
-                              <img src="assets/img/projects/project-2.png" alt="project-2" class="img-fluid w-100">
+                              <img src="assets/img/projects/ui-mobile-cover-depan.png" alt="project-2" class="img-fluid w-100">
                               <button type="button" class="gallery-popup" data-bs-toggle="modal" data-bs-target="#projectModal2">
                                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none"
                                   stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
@@ -585,7 +585,7 @@
                             <div id="projectCarousel2" class="carousel slide" data-bs-ride="carousel">
                               <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                  <img src="assets/img/projects/project-2.png" class="d-block w-100" alt="Project 2 - Image 1">
+                                  <img src="assets/img/projects/ui-mobile-cover.png" class="d-block w-100" alt="Project 2 - Image 1">
                                 </div>
                                 <div class="carousel-item">
                                   <img src="assets/img/projects/project-2-2.png" class="d-block w-100" alt="Project 2 - Image 2">
