--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Azrul Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.svg">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/azrul-logo.svg">
   <!-- Place favicon.ico in the root directory -->
 
   <!-- CSS here -->
@@ -261,7 +261,7 @@
                     </div>
                     <div class="social-media-icon">
                       <ul class="list-unstyled">
-                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="https://dribbble.com/designlagi"><i class="fab fa-dribbble"></i></a></li>
                         <li><a href="https://medium.com/@azrulartistik"><i class="fab fa-medium"></i></a></li>
                         <li><a href="https://github.com/azrulartistik"><i class="fab fa-github"></i></a></li>
                         <li><a href="https://www.youtube.com/@mentorazrul"><i class="fab fa-youtube"></i></a></li>
@@ -341,7 +341,7 @@
                             <img src="assets/img/icons/motion.svg" alt="motion">
                           </div>
                           <div class="text">
-                            <h3 class="title">Motion Design</h3>
+                            <h3 class="title">Motion Video</h3>
                           </div>
                         </div>
                       </div>
@@ -351,7 +351,7 @@
                             <img src="assets/img/icons/web.svg" alt="web">
                           </div>
                           <div class="text">
-                            <h3 class="title">Web Development</h3>
+                            <h3 class="title">Framer Website</h3>
                           </div>
                         </div>
                       </div>
@@ -361,7 +361,7 @@
                             <img src="assets/img/icons/framer-web.svg" alt="framer-web">
                           </div>
                           <div class="text">
-                            <h3 class="title">Framer Website</h3>
+                            <h3 class="title">Design Mentor</h3>
                           </div>
                         </div>
                       </div>
