Update Contents & Codes 4

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Azrul Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.svg">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/azrul-logo.svg.svg">
   <!-- Place favicon.ico in the root directory -->
 
   <!-- CSS here -->
