update content & code part 5

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Azrul Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/azrul-logo.svg.svg">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/img/azrul-logo.svg">
   <!-- Place favicon.ico in the root directory -->
 
   <!-- CSS here -->
@@ -260,10 +260,10 @@
                     </div>
                     <div class="social-media-icon">
                       <ul class="list-unstyled">
-                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                        <li><a href="https://medium.com/@azrulartistik"><i class="fab fa-medium"></i></a></li>
-                        <li><a href="https://github.com/azrulartistik"><i class="fab fa-github"></i></a></li>
-                        <li><a href="https://www.youtube.com/@mentorazrul"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="https://dribbble.com/designlagi" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="https://medium.com/@azrulartistik" target="_blank"><i class="fab fa-medium"></i></a></li>
+                        <li><a href="https://github.com/azrulartistik" target="_blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.youtube.com/@mentorazrul" target="_blank"><i class="fab fa-youtube"></i></a></li>
                       </ul>
                     </div>
                   </div>
@@ -276,24 +276,25 @@
                   <div class="top-info">
                     <div class="text">
                       <h1 class="main-title">My Recent Article and Publications</h1>
-                      <p>I'm here to help if you're searching for a product designer to bring your idea to life or a
-                        design partner to help take your business to the next level.</p>
+                      <p>Explore my latest UI/UX case studies, insights, and design explorations. Read more on Medium! 🚀</p>
                     </div>
                   </div>
                   <div class="article-publications article-area">
                     <div class="article-publications-main">
                       <div class="row">
+                        <!-- Blog Card 1 -->
                         <div class="col-xl-6 col-lg-4 col-md-6">
                           <div class="article-publications-item">
                             <div class="image">
-                              <a href="article.html" class="d-block w-100">
+                              <a href="https://medium.com/design-bootcamp/bank-jago-ux-challenge-designing-jago-last-wish-for-better-life-insurance-15e1c9e35511" target="_blank" rel="noopener noreferrer" class="d-block w-100">
                                 <img src="assets/img/blog/blog-img-1.jpg" alt="blog-img-1" class="img-fluid w-100">
                               </a>
-                              <a href="article.html" class="tags">Development</a>
+                              <a href="https://medium.com/your-username/article-1-slug" target="_blank" rel="noopener noreferrer" 
+                              class="tags">Case Study</a>
                             </div>
                             <div class="text">
-                              <a href="article.html" class="title">Want To Upgrade Your Brain? Stop Doing These 7
-                                Things</a>
+                              <a href="https://medium.com/design-bootcamp/bank-jago-ux-challenge-designing-jago-last-wish-for-better-life-insurance-15e1c9e35511" 
+                              target="_blank" rel="noopener noreferrer" class="title">Bank Jago UX Challenge | Designing “Jago Last Wish” for Better Life Insurance</a>
                               <ul class="list-unstyled">
                                 <li>15 min read</li>
                                 <li>Nov 6, 2023</li>
