--- a/contact.html
+++ b/contact.html
@@ -261,10 +261,10 @@
                     </div>
                     <div class="social-media-icon">
                       <ul class="list-unstyled">
-                        <li><a href="https://dribbble.com/designlagi"><i class="fab fa-dribbble"></i></a></li>
-                        <li><a href="https://medium.com/@azrulartistik"><i class="fab fa-medium"></i></a></li>
-                        <li><a href="https://github.com/azrulartistik"><i class="fab fa-github"></i></a></li>
-                        <li><a href="https://www.youtube.com/@mentorazrul"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="https://dribbble.com/designlagi" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="https://medium.com/@azrulartistik" target="_blank"><i class="fab fa-medium"></i></a></li>
+                        <li><a href="https://github.com/azrulartistik" target="_blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.youtube.com/@mentorazrul" target="_blank"><i class="fab fa-youtube"></i></a></li>
                       </ul>
                     </div>
                   </div>
@@ -277,8 +277,7 @@
                   <div class="top-info">
                     <div class="text">
                       <h1 class="main-title">Let's 👋 <span>Work</span> Together</h1>
-                      <p>I'm here to help if you're searching for a product designer to bring your idea to life or a
-                        design partner to help take your business to the next level.</p>
+                      <p>Have a project in mind? Let’s collaborate and bring your vision to life! 🚀</p>
                     </div>
                   </div>
                   <div class="contact-area">
