--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
                     </div>
                     <div class="social-media-icon">
                       <ul class="list-unstyled">
-                        <li><a href="https://dribbble.com/designlagi"><i class="fab fa-dribbble"></i></a></li>
-                        <li><a href="https://medium.com/@azrulartistik"><i class="fab fa-medium"></i></a></li>
-                        <li><a href="https://github.com/azrulartistik"><i class="fab fa-github"></i></a></li>
-                        <li><a href="https://www.youtube.com/@mentorazrul"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="https://dribbble.com/designlagi" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="https://medium.com/@azrulartistik" target="_blank"><i class="fab fa-medium"></i></a></li>
+                        <li><a href="https://github.com/azrulartistik" target="_blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.youtube.com/@mentorazrul" target="_blank"><i class="fab fa-youtube"></i></a></li>
                       </ul>
                     </div>
                   </div>
