--- a/services.html
+++ b/services.html
@@ -261,10 +261,10 @@
                     </div>
                     <div class="social-media-icon">
                       <ul class="list-unstyled">
-                        <li><a href="https://dribbble.com/designlagi"><i class="fab fa-dribbble"></i></a></li>
-                        <li><a href="https://medium.com/@azrulartistik"><i class="fab fa-medium"></i></a></li>
-                        <li><a href="https://github.com/azrulartistik"><i class="fab fa-github"></i></a></li>
-                        <li><a href="https://www.youtube.com/@mentorazrul"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="https://dribbble.com/designlagi" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="https://medium.com/@azrulartistik" target="_blank"><i class="fab fa-medium"></i></a></li>
+                        <li><a href="https://github.com/azrulartistik" target="_blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.youtube.com/@mentorazrul" target="_blank"><i class="fab fa-youtube"></i></a></li>
                       </ul>
                     </div>
                   </div>
@@ -277,7 +277,7 @@
                   <div class="top-info">
                     <div class="text">
                       <h1 class="main-title">Services I <span>Offered</span></h1>
-                      <p>Transforming your vision into intuitive, user-centered designs. Let’s create impactful digital experiences together!
+                      <p>Let’s collaborate and bring your vision to life with impactful design solutions! 🚀
                     </div>
                     <div class="available-btn">
                       <span><i class="fas fa-circle"></i> Available For Hire</span>
@@ -667,11 +667,11 @@
                     <div class="slider-main d-flex gap-4 align-items-center">
                       <div class="slider-item">
                         <a href="contact.html">Let's 👋 Work Together</a>
-                        <a href="contact.html">Let’s Create Impactful Digital Experience 👨🏻‍💻</a>
+                        <a href="contact.html">Let’s Create 👨🏻‍💻 Impactful Digital Experience 🚀</a>
                       </div>
                       <div class="slider-item">
                         <a href="contact.html">Let's 👋 Work Together</a>
-                        <a href="contact.html">Let’s Create Impactful Digital Experience 👨🏻‍💻</a>
+                        <a href="contact.html">Let’s Create 👨🏻‍💻 Impactful Digital Experience 👨🏻‍💻</a>
                       </div>
                     </div>
                   </div>
