--- a/portfolio.html
+++ b/portfolio.html
@@ -261,10 +261,10 @@
                     </div>
                     <div class="social-media-icon">
                       <ul class="list-unstyled">
-                        <li><a href="https://dribbble.com/designlagi"><i class="fab fa-dribbble"></i></a></li>
-                        <li><a href="https://medium.com/@azrulartistik"><i class="fab fa-medium"></i></a></li>
-                        <li><a href="https://github.com/azrulartistik"><i class="fab fa-github"></i></a></li>
-                        <li><a href="https://www.youtube.com/@mentorazrul"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="https://dribbble.com/designlagi" target="_blank"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="https://medium.com/@azrulartistik" target="_blank"><i class="fab fa-medium"></i></a></li>
+                        <li><a href="https://github.com/azrulartistik" target="_blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.youtube.com/@mentorazrul" target="_blank"><i class="fab fa-youtube"></i></a></li>
                       </ul>
                     </div>
                   </div>
@@ -277,8 +277,7 @@
                   <div class="top-info">
                     <div class="text">
                       <h1 class="main-title">Check Out My Latest <span>Projects</span></h1>
-                      <p>I'm here to help if you're searching for a product designer to bring your idea to life or a
-                        design partner to help take your business to the next level.</p>
+                      <p>Explore my recent works, where creativity meets functionality in user-centered design.</p>
                     </div>
                   </div>
                   <div class="portfolio-area">
@@ -286,22 +285,19 @@
                       <div class="col-lg-12">
                         <div class="portfolio-item">
                           <div class="image">
-                            <img src="assets/img/projects/project-1.png" alt="project-1" class="img-fluid w-100">
-                            <a href="assets/img/projects/project-1.png" class="gallery-popup full-image-preview parent-container">
-                              <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="none"
-                                stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
-                                <path d="M10 4.167v11.666M4.167 10h11.666"></path>
-                              </svg>
+                            <!-- Mengubah image menjadi clickable dan mengarah ke portfolio details -->
+                            <a href="portfolio-details.html?id=flexiflow">
+                              <img src="assets/img/ai-course-creation/course-creation-cover.png" alt="project-1" class="img-fluid w-100">
                             </a>
+                            <!-- Menghapus gallery popup karena tidak diperlukan -->
                           </div>
                           <div class="text">
                             <div class="info">
-                              <!-- Perhatikan ID di URL: portfolio-details.html?id=flexiflow -->
-                              <a href="portfolio-details.html?id=flexiflow" class="title">FlowSaaS - SaaS Application Tools</a>
-                              <p class="subtitle">SaaS App | UI UX Design</p>
+                              <a href="portfolio-details.html?id=flexiflow" class="title">Eduqat - AI Course Creation (Self-Paced)</a>
+                              <p class="subtitle">Product Design & Research | Dashboard</p>
                             </div>
                             <div class="visite-btn">
-                              <a href="portfolio-details.html?id=flexiflow">Visit Site
+                              <a href="portfolio-details.html?id=flexiflow">View Project
                                 <svg class="arrow-up" width="14" height="15" viewBox="0 0 14 15" fill="none"
                                   xmlns="http://www.w3.org/2000/svg">
                                   <path d="M9.91634 4.5835L4.08301 10.4168" stroke-linecap="round" stroke-linejoin="round"></path>
